--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
- <p>Instructions</p>
+ <!-- <p>Instructions</p>
   <ol type="1">
         <p class="Instructions">1. The game is simple, just remember the pattern of the button flashes <br>
-         2. As you go up level you have to remember the exact pattern at which button flashes from the start of the game </p>
+         2. As you go up level you have to remember the exact pattern at which button flashes from the start of the game </p> -->
 
   <h1 id="level-title">Press A Key to Start</h1>
   <div class="container">
